# knngl

./: .gitignore  CMakeLists.txt  README.md  knn.cpp  util.cpp  util.hpp
glad/include/glad/: egl.h  gl.h
glad/src/: egl.c  gl.c
python/: bench_adult.py  bench_adult_rpi.py  bench_rtiot.py  bench_single_time.py  data.npy  fit_knngl.py  plot_comp.py  plot_ks.py  plot_single_time.py  plot_speedup.py  plot_times.py  queries.npy  test.py  test_adult.py
results/: result_adult.csv  result_adult_rpi.csv  result_rtiot.csv  single_time.txt  single_time_rpi.txt  sk_vs_knngl_1.pgf  sk_vs_knngl_3.pgf  sk_vs_knngl_5.pgf
